# ai-recipe-optimizer

./: README.md  pyproject.toml  requirements.txt
src/: main.py
tests/: test_main.py
